allow adding ed25519 keys
